--- a/content/settings.json
+++ b/content/settings.json
@@ -20,7 +20,7 @@
             "hashnode": "",
             "instagram": "",
             "linkedin": "https://www.linkedin.com/in/baris-altun-3b3175165",
-            "mail": "mailto:barisaltun96@gmail.com",
+            "mail": "mailto:hello@barisaltun.de",
             "mastodon": "",
             "medium": "",
             "twitter": "",
